# sqlx-leak-repro

./: Cargo.toml  Dockerfile  run-inner.sh  run.sh  schema.sql
src/: main.rs
