[package]
name = "sqlx-leak-repro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.9", features = ["sqlite", "runtime-tokio-native-tls"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }